--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,4 +1,5 @@
-<article class="example">
+<div class="container">
+  <h1>New life</h1>
   <div class="timer" id="timer-1">
     <div class="field">
       <span class="value" data-value="days">--</span>
@@ -20,5 +21,6 @@
       <span class="label">Seconds</span>
     </div>
   </div>
+
+</div>
   
-</article>
